Use the regular font size with \lstinline.
	* doc/specs/urbi-specs.sty (urbiscript): New environment.
	Use footnotesize here, not globally, so that \lstinline uses
	regular size (currently it looks somewhat ugly).
	* doc/specs/float.tex, doc/specs/lang.tex, doc/specs/list.tex,
	* doc/specs/stdlib.tex: Use it.

--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -16,10 +16,10 @@ syntax presented in \autoref{sec:us-syn-lit-float}. A null float can also be
 obtained with \lstinline|Float|'s \lstinline|new| method
 (\autoref{lst:new-float}).
 
-\begin{lstlisting}[caption=Creating a new float, label=lst:new-float,
+\begin{urbiscript}[caption=Creating a new float, label=lst:new-float,
   float=\floatpos]
   Float.new; [00000000] 0
-\end{lstlisting}
+\end{urbiscript}
 
 \subsection{Methods}
 
@@ -28,79 +28,79 @@ obtained with \lstinline|Float|'s \lstinline|new| method
 
 Return the absolute value of the target (\autoref{lst:float-abs}).
 
-\begin{lstlisting}[caption=Float.abs, label=lst:float-abs,
+\begin{urbiscript}[caption=Float.abs, label=lst:float-abs,
   float=\floatposh]
   (-5).abs;
   [00000000] 5
   (5).abs;
   [00000000] 5
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{acos}
 
 Return the arcosinus of the target.
 
-\begin{lstlisting}[caption=Float.acos, label=lst:float-acos,
+\begin{urbiscript}[caption=Float.acos, label=lst:float-acos,
   float=\floatposh]
   1.acos;
   [00000000] 0
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{asin}
 
 Return the arcsinus of the target.
 
-\begin{lstlisting}[caption=Float.asin, label=lst:float-asin,
+\begin{urbiscript}[caption=Float.asin, label=lst:float-asin,
   float=\floatposh]
   0.asin;
   [00000000] 0
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{asString}
 
 Return a string representing the target (\autoref{lst:float-asString}).
 
-\begin{lstlisting}[caption=Float.asString, label=lst:float-asString,
+\begin{urbiscript}[caption=Float.asString, label=lst:float-asString,
   float=\floatposh]
   42.asString;
   [00000000] "42"
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{atan}
 
 Return the arctangent of the target (\autoref{lst:float-atan}).
 
-\begin{lstlisting}[caption=Float.atan, label=lst:float-atan,
+\begin{urbiscript}[caption=Float.atan, label=lst:float-atan,
   float=\floatposh]
   0.atan;
   [00000000] 0
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{bitand}
 
 Return the bitwise and between the target and the argument (\autoref{lst:float-bitand}).
 
-\begin{lstlisting}[caption=Float.bitand, label=lst:float-bitand,
+\begin{urbiscript}[caption=Float.bitand, label=lst:float-bitand,
   float=\floatposh]
   3 bitand 6;
   [00000000] 2
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{bitor}
 
 Return the bitwise or between the target and the argument (\autoref{lst:float-bitor}).
 
-\begin{lstlisting}[caption=Float.bitor, label=lst:float-bitor,
+\begin{urbiscript}[caption=Float.bitor, label=lst:float-bitor,
   float=\floatposh]
   3 bitand 6;
   [00000000] 7
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{clone}
 
 Return a fresh Float with the same value as the target (\autoref{lst:float-clone}).
 
-\begin{lstlisting}[caption=Float.clone, label=lst:float-clone,
+\begin{urbiscript}[caption=Float.clone, label=lst:float-clone,
   float=\floatposh]
   var x = 0;
   [00000000] 0
@@ -108,73 +108,73 @@ Return a fresh Float with the same value as the target (\autoref{lst:float-clone
   [00000000] 0
   x === y;
   [00000000] false
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{compl}
 
 Return the 1-complement of the target (\autoref{lst:float-compl}).
 
-\begin{lstlisting}[caption=Float.compl, label=lst:float-compl,
+\begin{urbiscript}[caption=Float.compl, label=lst:float-compl,
   float=\floatposh]
   compl 1;
   [00000000] -2
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{cos}
 
 Return the cosinus of the target (\autoref{lst:float-cos}).
 
-\begin{lstlisting}[caption=Float.cos, label=lst:float-cos,
+\begin{urbiscript}[caption=Float.cos, label=lst:float-cos,
   float=\floatposh]
   0.cos;
   [00000000] 1
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{exp}
 
 Return the exponential of the target (\autoref{lst:float-exp}).
 
-\begin{lstlisting}[caption=Float.exp, label=lst:float-exp,
+\begin{urbiscript}[caption=Float.exp, label=lst:float-exp,
   float=\floatposh]
   1.exp;
   [00000000] 2.71828
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{inf}
 
 Return the infinity (\autoref{lst:float-inf}).
 
-\begin{lstlisting}[caption=Float.inf, label=lst:float-inf,
+\begin{urbiscript}[caption=Float.inf, label=lst:float-inf,
   float=\floatposh]
   Float.inf;
   [00000000] inf
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{log}
 
 Return the logarithm of the target (\autoref{lst:float-log}).
 
-\begin{lstlisting}[caption=Float.log, label=lst:float-log,
+\begin{urbiscript}[caption=Float.log, label=lst:float-log,
   float=\floatposh]
   2.71828.log;
   [00000000] 0.999999
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{nan}
 
 Return the ``not a number'' special float value (\autoref{lst:float-nan}).
 
-\begin{lstlisting}[caption=Float.nan, label=lst:float-nan,
+\begin{urbiscript}[caption=Float.nan, label=lst:float-nan,
   float=\floatposh]
   Float.nan;
   [00000000] nan
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{random}
 
 Return a random number between 0 and the target(\autoref{lst:float-random}).
 
-\begin{lstlisting}[caption=Float.random, label=lst:float-random,
+\begin{urbiscript}[caption=Float.random, label=lst:float-random,
   float=\floatposh]
   5.random;
   [00000000] 3
@@ -182,107 +182,107 @@ Return a random number between 0 and the target(\autoref{lst:float-random}).
   [00000000] 1
   5.random;
   [00000000] 2
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{round}
 
 Return the target, rounded (\autoref{lst:float-round}).
 
-\begin{lstlisting}[caption=Float.round, label=lst:float-round,
+\begin{urbiscript}[caption=Float.round, label=lst:float-round,
   float=\floatposh]
   1.6.round;
   [00000000] 2
   1.4.round;
   [00000000] 1
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{seq}
 
 Return the sequence of integer from 0 to target - 1 as a list (\autoref{lst:float-seq}).
 
-\begin{lstlisting}[caption=Float.seq, label=lst:float-seq,
+\begin{urbiscript}[caption=Float.seq, label=lst:float-seq,
   float=\floatposh]
   3.seq;
   [00000000] [0, 1, 2]
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{sin}
 
 Return the sinus of the target (\autoref{lst:float-sin}).
 
-\begin{lstlisting}[caption=Float.sin, label=lst:float-sin,
+\begin{urbiscript}[caption=Float.sin, label=lst:float-sin,
   float=\floatposh]
   0.sin;
   [00000000] 0
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{sqrt}
 
 Return the square root of the target (\autoref{lst:float-sqrt}).
 
-\begin{lstlisting}[caption=Float.sqrt, label=lst:float-sqrt,
+\begin{urbiscript}[caption=Float.sqrt, label=lst:float-sqrt,
   float=\floatposh]
   1024.sqrt;
   [00000000] 32
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{tan}
 
 Return the tangent of the target (\autoref{lst:float-tan}).
 
-\begin{lstlisting}[caption=Float.tan, label=lst:float-tan,
+\begin{urbiscript}[caption=Float.tan, label=lst:float-tan,
   float=\floatposh]
   0.tan;
   [00000000] 0
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{trunc}
 
 Return the target truncated  (\autoref{lst:float-trunc}).
 
-\begin{lstlisting}[caption=Float.trunc, label=lst:float-trunc,
+\begin{urbiscript}[caption=Float.trunc, label=lst:float-trunc,
   float=\floatposh]
   1.9.trunc;
   [00000000] 1
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{asFloat}
 
 Return the target (\autoref{lst:float-asFloat}).
 
-\begin{lstlisting}[caption=Float.asFloat, label=lst:float-asFloat,
+\begin{urbiscript}[caption=Float.asFloat, label=lst:float-asFloat,
   float=\floatposh]
   51.asFloat;
   [00000000] 51
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{sqr}
 
 Return the square of the target (\autoref{lst:float-sqr}).
 
-\begin{lstlisting}[caption=Float.sqr, label=lst:float-sqr,
+\begin{urbiscript}[caption=Float.sqr, label=lst:float-sqr,
   float=\floatposh]
   32.sqr;
   [00000000] 1024
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{sgn}
 
 Return 1 if the target is positive, -1 otherwise (\autoref{lst:float-sgn}).
 
-\begin{lstlisting}[caption=Float.sgn, label=lst:float-sgn,
+\begin{urbiscript}[caption=Float.sgn, label=lst:float-sgn,
   float=\floatposh]
   (-1164).sgn;
   [00000000] -1
   (1164).sgn;
   [00000000] 1
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{times}
 
 Take one functional argument and call it target times (\autoref{lst:float-times}).
 
-\begin{lstlisting}[caption=Float.times, label=lst:float-times,
+\begin{urbiscript}[caption=Float.times, label=lst:float-times,
   float=\floatposh]
   5.times(function (i) { echo("ping")});
   [00000000] *** ping
@@ -290,14 +290,14 @@ Take one functional argument and call it target times (\autoref{lst:float-times}
   [00000000] *** ping
   [00000000] *** ping
   [00000000] *** ping
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{each}
 
 Take one functional argument and call it on every integer from 0 to
 target - 1 (\autoref{lst:float-each}).
 
-\begin{lstlisting}[caption=Float.each, label=lst:float-each,
+\begin{urbiscript}[caption=Float.each, label=lst:float-each,
   float=\floatposh]
   5.each(function (i) { echo(i * 2)});
   [00000000] *** 0
@@ -305,28 +305,28 @@ target - 1 (\autoref{lst:float-each}).
   [00000000] *** 4
   [00000000] *** 6
   [00000000] *** 8
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{\^{}}
 
 Return the bitwise exclusive or between the target and the first argument.
 
-\begin{lstlisting}[caption=Float.'\^{}', label=lst:float-bitxor,
+\begin{urbiscript}[caption=Float.'\^{}', label=lst:float-bitxor,
   float=\floatposh]
   3 ^ 6;
   [00000000] 5
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{$>>$}
 
 \lstinline|a >> b| return the \lstinline|a| shifted by \lstinline|b|
 bit towards the right (\autoref{lst:float-rshift}).
 
-\begin{lstlisting}[caption=Float.'$>>$', label=lst:float-rshift,
+\begin{urbiscript}[caption=Float.'$>>$', label=lst:float-rshift,
   float=\floatposh]
   4 >> 2;
   [00000000] 1
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{$<$}
 
@@ -335,88 +335,88 @@ bit towards the right (\autoref{lst:float-rshift}).
 (\lstinline|<=|, \lstinline|>|, \ldots) can thus also be applied on
 floats since Float inherits Orderable (see \autoref{sec:std-orderable}).
 
-\begin{lstlisting}[caption=Float.'$<$', label=lst:float-LT,
+\begin{urbiscript}[caption=Float.'$<$', label=lst:float-LT,
   float=\floatposh]
   0 < 1;
   [00000000] true
   1 < 0;
   [00000000] false
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{$<<$}
 
 \lstinline|a << b| return the \lstinline|a| shifted by \lstinline|b|
 bit towards the left (\autoref{lst:float-lshift}).
 
-\begin{lstlisting}[caption=Float.'$<<$', label=lst:float-lshift,
+\begin{urbiscript}[caption=Float.'$<<$', label=lst:float-lshift,
   float=\floatposh]
   4 << 2;
   [00000000] 16
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{-}
 
 \lstinline|a - b| returns \lstinline|a| minus \lstinline|b| (\autoref{lst:float-minus}).
 
-\begin{lstlisting}[caption=Float.'-', label=lst:float-minus,
+\begin{urbiscript}[caption=Float.'-', label=lst:float-minus,
   float=\floatposh]
   6 - 3;
   [00000000] 3
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{+}
 
 \lstinline|a + b| returns \lstinline|a| plus \lstinline|b| (\autoref{lst:float-plus}).
 
-\begin{lstlisting}[caption=Float.'+', label=lst:float-plus, float=\floatposh]
+\begin{urbiscript}[caption=Float.'+', label=lst:float-plus, float=\floatposh]
   1 + 1;
   [00000000] 2
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{/}
 
 \lstinline|a / b| returns the quotient of \lstinline|a| divided by
 \lstinline|b| (\autoref{lst:float-div}).
 
-\begin{lstlisting}[caption=Float.'/', label=lst:float-div, float=\floatposh]
+\begin{urbiscript}[caption=Float.'/', label=lst:float-div, float=\floatposh]
   50 / 11;
   [00000000] 4
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{\%}
 
 \lstinline|a \% b| returns \lstinline|a| modulo \lstinline|b| (\autoref{lst:float-mod}).
 
-\begin{lstlisting}[caption=Float.'\%', label=lst:float-mod, float=\floatposh]
+\begin{urbiscript}[caption=Float.'\%', label=lst:float-mod, float=\floatposh]
   50 % 11;
   [00000000] 2
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{*}
 
 \lstinline|a * b| returns \lstinline|a| times \lstinline|b| (\autoref{lst:float-STAR}).
 
-\begin{lstlisting}[caption=Float.'*', label=lst:float-STAR, float=\floatposh]
+\begin{urbiscript}[caption=Float.'*', label=lst:float-STAR, float=\floatposh]
   2 * 3;
   [00000000] 6
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{**}
 
 \lstinline|a ** b| returns \lstinline|a| to the \lstinline|b| power (\autoref{lst:float-STAR-STAR}).
 
-\begin{lstlisting}[caption=Float.'**', label=lst:float-STAR-STAR, float=\floatposh]
+\begin{urbiscript}[caption=Float.'**', label=lst:float-STAR-STAR, float=\floatposh]
   2 ** 10;
   [00000000] 1024
-\end{lstlisting}
+\end{urbiscript}
 
 \subsubsection{==}
 
 \lstinline|a == b| returns whether \lstinline|a| equals \lstinline|b| (\autoref{lst:float-eq}).
 
-\begin{lstlisting}[caption={Float.'=='}, label=lst:float-eq, float=\floatposh]
+\begin{urbiscript}[caption={Float.'=='}, label=lst:float-eq, float=\floatposh]
   1 == 1;
   [00000000] true
   1 == 2;
   [00000000] false
-\end{lstlisting}
+\end{urbiscript}
